[package]
name = "headers-retry-after"
version = "0.1.0"
edition = "2018"
rust-version = "1.56"
description = "typed accessible `Retry-After` HTTP header"
license = "MIT"
repository = "github.com/robo9k/headers-retry-after"
keywords = ["http", "headers"]
categories = ["web-programming"]
include = ["src/"]
readme = "README-crate.md"

[package.metadata.docs.rs]
targets = []
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
headers-core = { version = "0.3", default-features = false }
httpdate = { version = "1", default-features = false }

[dev-dependencies]
headers = { version = "0.4", default-features = false }
http = { version = "1", default-features = false }
